engine-net-2/examples/Errors/FilterLambdaExpressionErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	[?t\assign<n>{el:int -> 42}]
}
